# My3D

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  My3D  cmake_install.cmake  main.c
include/: dpr_errors.h  map_interactions.h  my.h  setup.h  teams.h
include/components/: game_display.h  game_manager.h  teams_component.h
include/components/isometry/: map_manager_component.h
include/systems/: game_manager_system.h  teams_system.h
lib/gamacon/: .gitignore  Makefile
lib/gamacon/include/: component.h  data.h  engine.h  entity.h  entity_factory.h  list.h  prefab.h  read_line.h  scene.h  sfml_renderer.h  sprite.h  system.h  tags.h  text.h  tupple.h  utility.h  vector2.h
lib/gamacon/include/components/: camerafollow_component.h  collision_component.h  controllable_component.h  fixed_to_cam_component.h  friction_component.h  friction_giver.h  movable_component.h  parallax_component.h  renderer.h  transform_component.h
lib/gamacon/include/components/controllers/: keyboard_controller.h
lib/gamacon/include/systems/: camerafollow_system.h  collision_system.h  friction_system.h  movable_system.h  parallax_system.h  sfml_renderer_system.h
lib/gamacon/include/systems/controllers/: keyboard_controller_system.h
lib/gamacon/src/: component.c  system.c
lib/gamacon/src/components/: camera_follow.c  collision_component.c  controllable_component.c  fixed_to_cam.c  friction_component.c  friction_giver.c  movable_component.c  parallax_component.c  renderer.c  transform_component.c
lib/gamacon/src/components/controllers/: keyboard_controller.c
lib/gamacon/src/components/renderers/: anim_renderer.c  sprite_renderer.c  text_renderer.c
lib/gamacon/src/deserializer/: deserialize_entity.c  prefab.c
lib/gamacon/src/engine/: discard_player.c  engine.c  engine_component_builder.c  engine_dataloader.c  engine_internal.c  engine_system_builder.c
lib/gamacon/src/entity/: entity.c  entity_factory.c
lib/gamacon/src/scene/: scene.c  scene_destroy.c  scene_loader.c
lib/gamacon/src/sfml_renderer/: sfml_dataloaders.c  sfml_drawer.c  sfml_functions.c  sfml_music_player.c  texture_utility.c
lib/gamacon/src/systems/: camera_follow_system.c  collision_system.c  fixed_to_cam_pseudosystem.c  friction_system.c  movable_system.c  parallax_system.c  sfml_renderer_system.c
lib/gamacon/src/systems/controllers/: keyboard_controller_system.c
lib/gamacon/src/utility/: arraylen.c  list.c  my_realloc.c  tupple.c  vector2.c
lib/gamacon/tests/: deserializations.c  game.gcprefab  game_loop.c  player.gcprefab
lib/my/: Makefile
lib/my/include/: my.h
lib/my/my/: my_getnbr.c  my_showmem.c  my_str_replace.c  my_strdup.c  tostr.c
lib/my/src/: printf.c
lib/my/src/formaters/: string_formater.c
prefabs/: game.gcprefab  mainmenu.gcprefab  options.gcprefab  pause.gcprefab  tilemap.gcmap
prefabs/go/: happiness.gcprefab  stupidity.gcprefab
prefabs/teams/: absent.gcprefab  forgot_register.gcprefab
src/: framerate.c  game_loader.c  interface.c  main_menu.c  options.c  selectors.c  toolbar.c
src/components/: game_display.c  game_manager.c  teams_component.c
src/components/isometry/: map_interactions.c  map_manager_component.c
src/isometry/: map_interactions.c  tile_collision_manager.c
src/systems/: game_display_system.c  game_manager_system.c  teams_system.c
src/teams/: absent.c  forgot.c
