cmake_minimum_required(VERSION 3.15)
project(My3D C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(lib/gamacon/include)
include_directories(lib/gamacon/include/components)
include_directories(lib/gamacon/include/components/controllers)
include_directories(lib/gamacon/include/systems)
include_directories(lib/gamacon/include/systems/controllers)
include_directories(lib/my/include)
include_directories(lib/xmlparser/include)

add_executable(My3D
        include/my.h
        include/setup.h
        lib/gamacon/include/components/controllers/keyboard_controller.h
        lib/gamacon/include/components/camerafollow_component.h
        lib/gamacon/include/components/collision_component.h
        lib/gamacon/include/components/controllable_component.h
        lib/gamacon/include/components/fixed_to_cam_component.h
        lib/gamacon/include/components/friction_component.h
        lib/gamacon/include/components/friction_giver.h
        lib/gamacon/include/components/movable_component.h
        lib/gamacon/include/components/parallax_component.h
        lib/gamacon/include/components/renderer.h
        lib/gamacon/include/components/transform_component.h
        lib/gamacon/include/components/vertex_component.h
        lib/gamacon/include/systems/controllers/keyboard_controller_system.h
        lib/gamacon/include/systems/camerafollow_system.h
        lib/gamacon/include/systems/collision_system.h
        lib/gamacon/include/systems/friction_system.h
        lib/gamacon/include/systems/movable_system.h
        lib/gamacon/include/systems/parallax_system.h
        lib/gamacon/include/systems/sfml_renderer_system.h
        lib/gamacon/include/component.h
        lib/gamacon/include/data.h
        lib/gamacon/include/engine.h
        lib/gamacon/include/entity.h
        lib/gamacon/include/entity_factory.h
        lib/gamacon/include/list.h
        lib/gamacon/include/my.h
        lib/gamacon/include/prefab.h
        lib/gamacon/include/quadtree.h
        lib/gamacon/include/read_line.h
        lib/gamacon/include/scene.h
        lib/gamacon/include/sfml_renderer.h
        lib/gamacon/include/sprite.h
        lib/gamacon/include/system.h
        lib/gamacon/include/tags.h
        lib/gamacon/include/text.h
        lib/gamacon/include/tupple.h
        lib/gamacon/include/utility.h
        lib/gamacon/include/vector2.h
        lib/gamacon/include/xml.h
        lib/gamacon/src/components/controllers/keyboard_controller.c
        lib/gamacon/src/components/renderers/anim_renderer.c
        lib/gamacon/src/components/renderers/map_renderer.c
        lib/gamacon/src/components/renderers/sprite_renderer.c
        lib/gamacon/src/components/renderers/text_renderer.c
        lib/gamacon/src/components/camera_follow.c
        lib/gamacon/src/components/collision_component.c
        lib/gamacon/src/components/controllable_component.c
        lib/gamacon/src/components/fixed_to_cam.c
        lib/gamacon/src/components/friction_component.c
        lib/gamacon/src/components/friction_giver.c
        lib/gamacon/src/components/movable_component.c
        lib/gamacon/src/components/parallax_component.c
        lib/gamacon/src/components/renderer.c
        lib/gamacon/src/components/transform_component.c
        lib/gamacon/src/components/isometry/vertex_component.c
        lib/gamacon/src/deserializer/deserialize_entity.c
        lib/gamacon/src/deserializer/prefab.c
        lib/gamacon/src/engine/discard_player.c
        lib/gamacon/src/engine/engine.c
        lib/gamacon/src/engine/engine_component_builder.c
        lib/gamacon/src/engine/engine_dataloader.c
        lib/gamacon/src/engine/engine_internal.c
        lib/gamacon/src/engine/engine_system_builder.c
        lib/gamacon/src/entity/entity.c
        lib/gamacon/src/entity/entity_factory.c
        lib/gamacon/src/scene/scene.c
        lib/gamacon/src/scene/scene_destroy.c
        lib/gamacon/src/scene/scene_loader.c
        lib/gamacon/src/sfml_renderer/sfml_dataloaders.c
        lib/gamacon/src/sfml_renderer/sfml_drawer.c
        lib/gamacon/src/sfml_renderer/sfml_functions.c
        lib/gamacon/src/sfml_renderer/sfml_music_player.c
        lib/gamacon/src/sfml_renderer/sfml_vertex.c
        lib/gamacon/src/sfml_renderer/texture_utility.c
        lib/gamacon/src/systems/controllers/keyboard_controller_system.c
        lib/gamacon/src/systems/camera_follow_system.c
        lib/gamacon/src/systems/collision_system.c
        lib/gamacon/src/systems/fixed_to_cam_pseudosystem.c
        lib/gamacon/src/systems/friction_system.c
        lib/gamacon/src/systems/movable_system.c
        lib/gamacon/src/systems/parallax_system.c
        lib/gamacon/src/systems/sfml_renderer_system.c
        lib/gamacon/src/utility/arraylen.c
        lib/gamacon/src/utility/list.c
        lib/gamacon/src/utility/my_realloc.c
        lib/gamacon/src/utility/tupple.c
        lib/gamacon/src/utility/vector2.c
        lib/gamacon/src/component.c
        lib/gamacon/src/system.c
        lib/my/include/formaters.h
        lib/my/include/my.h
        lib/my/my/alphanum_helper.c
        lib/my/my/index_of.c
        lib/my/my/my_compute_factorial_it.c
        lib/my/my/my_compute_factorial_rec.c
        lib/my/my/my_compute_power_it.c
        lib/my/my/my_compute_square_root.c
        lib/my/my/my_evil_str.c
        lib/my/my/my_find_prime_sup.c
        lib/my/my/my_getnbr.c
        lib/my/my/my_getnbr_base.c
        lib/my/my/my_getnbr_base.c
        lib/my/my/my_is_prime.c
        lib/my/my/my_isneg.c
        lib/my/my/my_print_alpha.c
        lib/my/my/my_print_comb.c
        lib/my/my/my_print_comb2.c
        lib/my/my/my_print_combn.c
        lib/my/my/my_print_digits.c
        lib/my/my/my_print_revalpha.c
        lib/my/my/my_put_nbr.c
        lib/my/my/my_putchar.c
        lib/my/my/my_putlong_base.c
        lib/my/my/my_putnbr_base.c
        lib/my/my/my_putstr.c
        lib/my/my/my_revstr.c
        lib/my/my/my_show_words_array.c
        lib/my/my/my_showmem.c
        lib/my/my/my_showstr.c
        lib/my/my/my_sort_int_array.c
        lib/my/my/my_str_isalpha.c
        lib/my/my/my_str_islower.c
        lib/my/my/my_str_isnum.c
        lib/my/my/my_str_isprintable.c
        lib/my/my/my_str_isupper.c
        lib/my/my/my_str_to_word_array.c
        lib/my/my/my_strcapitalize.c
        lib/my/my/my_strcat.c
        lib/my/my/my_strchr.c
        lib/my/my/my_strcmp.c
        lib/my/my/my_strcpy.c
        lib/my/my/my_strdup.c
        lib/my/my/my_strlen.c
        lib/my/my/my_strlowcase.c
        lib/my/my/my_strncat.c
        lib/my/my/my_strncmp.c
        lib/my/my/my_strncpy.c
        lib/my/my/my_strstr.c
        lib/my/my/my_strupcase.c
        lib/my/my/my_swap.c
        lib/my/my/tostr.c
        lib/my/my/utility.c
        lib/my/src/formaters/big_hexa_formater.c
        lib/my/src/formaters/char_formater.c
        lib/my/src/formaters/float_formater.c
        lib/my/src/formaters/hexa_formater.c
        lib/my/src/formaters/int_formater.c
        lib/my/src/formaters/no_format.c
        lib/my/src/formaters/octal_formater.c
        lib/my/src/formaters/ptr_formater.c
        lib/my/src/formaters/string_formater.c
        lib/my/src/formaters/string_nonprintable_formater.c
        lib/my/src/formaters/ubinary_formater.c
        lib/my/src/formaters/uint_formater.c
        lib/my/src/get_nbr_size.c
        lib/my/src/my_putlonglong_base.c
        lib/my/src/printf.c
        lib/my/src/printf_utility.c
        lib/quadtree/include/array.h
        lib/quadtree/include/quadtree_internal.h
        lib/quadtree/src/utility/calloc.c
        lib/quadtree/src/array.c
        lib/quadtree/src/qt_collide.c
        lib/quadtree/src/qt_destroy.c
        lib/quadtree/src/qt_layer.c
        lib/quadtree/src/qt_position_overlap.c
        lib/quadtree/src/qt_split.c
        lib/quadtree/src/quadtree.c
        lib/xmlparser/include/my.h
        lib/xmlparser/include/xml.h
        lib/xmlparser/include/xml_internal.h
        lib/xmlparser/src/child.c
        lib/xmlparser/src/floatutils.c
        lib/xmlparser/src/helper.c
        lib/xmlparser/src/list_utility.c
        lib/xmlparser/src/parsenode.c
        lib/xmlparser/src/rawnode.c
        lib/xmlparser/src/strangeget.c
        lib/xmlparser/src/xml_destroy.c
        lib/xmlparser/src/xmlget.c
        lib/xmlparser/src/xmlparser.c
        lib/xmlparser/src/xmlproperties.c
        src/game_loader.c
        src/main.c
        lib/gamacon/include/errors.h
        lib/gamacon/src/ui/button.c
        lib/gamacon/src/ui/setup_ui.c
        lib/gamacon/include/ui.h
        src/main_menu.c
        lib/gamacon/src/components/clickable_component.c
        lib/gamacon/include/components/clickable_component.h
        lib/gamacon/src/systems/clickable_manager.c
        lib/gamacon/src/sfml_renderer/sfml_events.c
        lib/my/my/my_str_replace.c
        lib/gamacon/src/sfml_renderer/sfml_init.c
        lib/gamacon/src/sfml_renderer/sfml_events.c
        lib/gamacon/src/components/isometry/map_managment.c
        lib/gamacon/include/components/map_managment.h
        lib/xmlparser/src/otherget.c
        src/options.c
        lib/gamacon/src/components/input_component.c
        lib/gamacon/include/components/input_component.h
        lib/xmlparser/src/otherget.c
        src/options.c
        lib/gamacon/src/components/input_component.c
        lib/gamacon/include/components/input_component.h
        src/systems/teams_system.c
        include/systems/teams_system.h
        include/components/teams_component.h
        src/components/teams_component.c
        lib/gamacon/src/components/tag_component.c
        lib/gamacon/include/components/tag_component.h
        src/components/game_manager.c
        include/components/game_manager.h
        include/dpr_errors.h
        include/components/game_display.h
        src/components/game_display.c
        src/systems/game_display_system.c
        lib/gamacon/src/components/tile_collision_manager.c
        lib/gamacon/include/tile_collision_manager.h
        lib/gamacon/src/engine/event_manager.c
        lib/gamacon/include/event_manager.h
        src/teams/absent.c
        src/teams/forgot.c include/teams.h
        src/systems/game_manager_system.c
        include/systems/game_manager_system.h
        lib/gamacon/include/keybindings.h
        lib/gamacon/src/components/isometry/map_interactions.c
        lib/gamacon/include/map_interactions.h
        lib/gamacon/include/keybindings.h
        lib/gamacon/src/ui/tooltip.c
        lib/gamacon/src/components/tooltip_component.c
        lib/gamacon/include/components/tooltip_component.h
        lib/gamacon/src/systems/tooltip_system.c
        lib/gamacon/src/components/isometry/vertex_data_loader.c lib/gamacon/src/components/isometry/map_manager_component.c lib/gamacon/include/components/isometry/map_manager_component.h)

add_compile_options(-W -Wall -Wextra -Wshadow)

target_link_libraries(My3D
        csfml-system
        csfml-graphics
        csfml-audio
        csfml-window
        m
)